:bug: [CTable] 修复表格配置 align 失效的问题

--- a/src/components/c-table/css/basic.less
+++ b/src/components/c-table/css/basic.less
@@ -254,6 +254,7 @@
   &-body {
     flex: 1;
     overflow: auto auto !important;
+    z-index: 1;
     //overflow: overlay overlay !important;
     //&::-webkit-scrollbar-thumb {
     //  background-color: var(--dw-scroll-color, rgba(0, 0, 0, 0)) !important;
